# odri_control_interface

./: .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml  readme.md
.github/workflows/: release.yml  test.yml
include/odri_control_interface/: joint_modules.hpp
src/: joint_modules.cpp
